--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
     <!-- Primary Meta Tags -->
-    <title>Market Index - Technical Analysis Indicator Screener</title>
+    <title>Market Index - Technical Analysis on 200+ Most Active Equities</title>
     <meta name="title" content="Market Index - Technical Analysis Indicator Screener" />
-    <meta name="description" content="Professional stock market technical analysis tool providing real-time indicator screening for Nifty50 and active equities. Get EMA, SMA, MACD, RSI signals." />
+    <meta name="description" content="Professional stock market technical analysis tool providing real-time indicator screening for Nifty50 and most active equities." />
     <meta name="keywords" content="stock market, technical analysis, Nifty50, stock screener, EMA, SMA, MACD, RSI, stock indicators" />
     <meta name="author" content="Aryaneel Shivam" />
     
