--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     
     <!-- Favicon -->
     <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='none' stroke='currentColor' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'><circle cx='12' cy='12' r='10'/><line x1='2' y1='12' x2='22' y2='12'/><path d='M12 2a15.3 15.3 0 0 1 4 10 15.3 15.3 0 0 1-4 10 15.3 15.3 0 0 1-4-10 15.3 15.3 0 0 1 4-10z'/></svg>" type="image/svg+xml">
+    <meta name="google-site-verification" content="iRSLnI3xkyULNzRxYHK4NGSEWCuWf1IRqbn5HknXtWc" />
   </head>
 
   <body>
