--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Google adsense meta verification tag -->
+    <meta name="google-adsense-account" content="ca-pub-6366344164829037">
     
     <!-- Primary Meta Tags -->
     <title>Market Index - Technical Analysis on 200+ Most Active Equities</title>
